# oxideav-amv

./: CHANGELOG.md  Cargo.toml  README.md
benches/: build_index.rs  demux_drain.rs  indexed_seek.rs  mux_write.rs
benches/common/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: demuxer_open.rs  parse.rs
src/: adpcm.rs  adpcm_encode.rs  audio.rs  codec_audio.rs  codec_video.rs  demux.rs  demuxer.rs  jpeg_decode.rs  jpeg_encode.rs  jpeg_reconstruct.rs  lib.rs  muxer.rs  parse.rs  video.rs
tests/: decode_audio_pcm.rs  decode_to_pixels.rs  encode_roundtrip.rs  encoder_roundtrip.rs  probe_and_parse.rs  registry_codec_path.rs  seek.rs  video_encoder_roundtrip.rs
tests/fixtures/: testsrc_30frames.amv
