[package]
name = "oxideav-amv"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-amv"
authors = ["Mark Karpeles"]
description = "Pure-Rust AMV (Actions Media Video) container demuxer for cheap Chinese portable-media-player .amv files"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-amv"
keywords = ["multimedia", "video", "amv", "container", "demuxer"]
categories = ["multimedia::encoding", "multimedia"]

[dependencies]
oxideav-core = "0.1"
